--- a/.github/workflows/hypot-issue.yml
+++ b/.github/workflows/hypot-issue.yml
@@ -19,7 +19,7 @@ jobs:
           # to the issue
           project-url: https://github.com/users/patricia-ternes/projects/3
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
-      - uses: actions/add-to-project@RELEASE_VERSION
+      - uses: actions/add-to-project@v0.5.0
         with:
           project-url: https://github.com/users/patricia-ternes/projects/3
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
