--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,5 +17,5 @@ jobs:
     steps:
       - uses: actions/add-to-project@v0.5.0
         with:
-          project-url: ${{ env.ADD_TO_PROJECT_URL }}
+          project-url: ${{ vars.ADD_TO_PROJECT_URL }}
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
