--- a/.github/workflows/hypot-issue.yml
+++ b/.github/workflows/hypot-issue.yml
@@ -12,16 +12,18 @@ jobs:
   add-to-project:
     name: Add issue to project
     runs-on: ubuntu-latest
+    env:
+      project_url: https://github.com/users/patricia-ternes/projects/3
     steps:
       - uses: actions/add-to-project@v0.5.0
         with:
           # You can target a project in a different organization
           # to the issue
-          project-url: https://github.com/users/patricia-ternes/projects/3
+          project-url: $project_url
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
       - uses: actions/add-to-project@v0.5.0
         with:
-          project-url: https://github.com/users/patricia-ternes/projects/3
+          project-url: $project_url
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
           labeled: needs-review, size/XL
           label-operator: AND
