--- a/.github/workflows/hypot-issue.yml
+++ b/.github/workflows/hypot-issue.yml
@@ -24,7 +24,7 @@ jobs:
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
       - uses: actions/add-to-project@v0.5.0
         with:
-          project-url: $project_url
-          github-token: ${{ env.ADD_TO_PROJECT_PAT }}
+          project-url: ${{ env.ADD_TO_PROJECT_PAT }}
+          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
           labeled: needs-review, size/XL
           label-operator: AND
