--- a/.github/workflows/hypot-issue.yml
+++ b/.github/workflows/hypot-issue.yml
@@ -7,13 +7,13 @@ on:
   pull_request:
     types:
       - opened
-
+env:
+  ADD_TO_PROJECT_URL: 'https://github.com/users/patricia-ternes/projects/3'
+      
 jobs:
   add-to-project:
     name: Add issue to project
     runs-on: ubuntu-latest
-    env:
-      ADD_TO_PROJECT_URL: 'https://github.com/users/patricia-ternes/projects/3'
     steps:
       - uses: actions/add-to-project@v0.5.0
         with:
@@ -23,7 +23,7 @@ jobs:
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
       - uses: actions/add-to-project@v0.5.0
         with:
-          project-url: ${{ env.ADD_TO_PROJECT_PAT }}
+          project-url: ${{ env.ADD_TO_PROJECT_URL }}
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
           labeled: needs-review, size/XL
           label-operator: AND
